# LPDP-RiR

./: .gitattributes  .gitignore  Readme.md  Zig_RiR3d.py  batch_process_dataset.py  collect_reports.py  effects.html  effects.md  install.bat  requirements.txt  run.bat  show.html
application/: main.py
application/ACX-UNET/: predict.py  unet.py
application/ACX-UNET/nets/: vgg.py
application/analyze3D/: analyze.py  analyze_gui.py  dataloader.py
application/data/: config.json  config_manager.py  database.py  datadelete.py  dataloader.py  security.py  treatment_guidelines.json
application/gui/: history.py  homepage.py  introduction.py  languages.py  navbar.py  styles.py
application/medical_analysis/: lesion_classifier.py  report_generator.py  surgical_planner.py
application/model/: model.py  model_gui.py
application/signin/: changepassword.py  changepassword_gui.py  login.py  login_gui.py  register.py  register_gui.py
application_cpp/ACX-UNET/nets/: resnet.py  unet.py
application_cpp/ACX-UNET/utils/: utils.py
application_cpp/analyze3D/: analyze.py
application_cpp/data/: config.json  nccn_guidelines.json
application_cpp/medical_analysis/: guideline_engine.py  lesion_classifier.py  report_generator.py  surgical_planner.py
application_cpp/model/: model.py
application_cpp/qt/: Analyze3DWindow.cpp  Analyze3DWindow.h  AppConfig.cpp  AppConfig.h  CMakeLists.txt  ChangePasswordDialog.cpp  ChangePasswordDialog.h  HistoryPage.cpp  HistoryPage.h  HomePage.cpp  HomePage.h  IntroductionPage.cpp  IntroductionPage.h  LoginWindow.cpp  LoginWindow.h  MagneticButtonStage.cpp  MagneticButtonStage.h  MainWindow.cpp  MainWindow.h  MarkdownTableParser.cpp  MarkdownTableParser.h  ModelInterfacePage.cpp  ModelInterfacePage.h  NavButton.cpp  NavButton.h  NavigationBar.cpp  NavigationBar.h  RegisterDialog.cpp  RegisterDialog.h  main.cpp
kernels/: wkv_cuda.cu  wkv_fallback.py
releases/: best_epoch_weights.pth  best_model.pth  build_standalone_msvc.zip.001  build_standalone_msvc.zip.002
